--- a/server/config-prod.json
+++ b/server/config-prod.json
@@ -1,8 +1,8 @@
 {
     "mysql": {
-        "host": "eu-cdbr-west-03.cleardb.net",
-        "user": "bf98f9480876d9",
-        "password": "36da3c79",
-        "database": "heroku_d9908f1abbf60bf"
+        "host": "eu-cdbr-west-01.cleardb.com",
+        "user": "bb05af0e9780f1",
+        "password": "7f7e604b",
+        "database": "heroku_7c2ab9b1c0da246"
     }
 }
